Fixed stoplist bug

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,34 +342,40 @@
     "            phrase = phrase.split(\" \")\n",
     "        if \"nltk_tokenize\" in self.feature_selection:\n",
     "            #tokenize using NLTK tokenizer, with words regex\n",
-    "            if len(self.feature_selection) > 1:\n",
+    "            # print(type(phrase))\n",
+    "            if isinstance(phrase, list):\n",
+    "                # print(\"is\")\n",
+    "                # pass\n",
     "                phrase =  list(itertools.chain.from_iterable([self.word_tokenizer.tokenize(partial_phrase) for partial_phrase in phrase]))\n",
     "            else:\n",
     "                phrase = self.word_tokenizer.tokenize(phrase)\n",
+    "                # print(phrase)\n",
     "        if \"nltk_tokenize_2\" in self.feature_selection:\n",
     "            #tokenize using NLTK's regex\n",
-    "            if len(self.feature_selection) > 1:\n",
+    "            if isinstance(phrase, list):\n",
     "                phrase =  list(itertools.chain.from_iterable([self.nltk_tokenizer.tokenize(partial_phrase) for partial_phrase in phrase]))\n",
     "            else:\n",
     "                phrase = self.nltk_tokenizer.tokenize(phrase)\n",
     "        if \"custom_tokenize\" in self.feature_selection:\n",
     "            #tokenize with custom regex\n",
-    "            if len(self.feature_selection) > 1:\n",
-    "                phrase =  list(itertools.chain.from_iterable([self.custom_tokenizer.tokenize(partial_phrase) for partial_phrase in phrase]))\n",
+    "            if isinstance(phrase, list):\n",
+    "                phrase = list(itertools.chain.from_iterable([self.custom_tokenizer.tokenize(partial_phrase) for partial_phrase in phrase]))\n",
     "            else:\n",
     "                phrase = self.custom_tokenizer.tokenize(phrase)\n",
     "        if \"nltk_stoplist\" in self.feature_selection:\n",
     "            #use an NLTK stoplist\n",
-    "            if len(self.feature_selection) > 1:\n",
+    "            if isinstance(phrase, list):#check words if already split into list\n",
+    "                #TODO: quicker way to run this?\n",
     "                phrases = []\n",
     "                for partial_phrase in phrase:\n",
-    "                    phrases +=  [word for word in partial_phrase.split(\" \") if word not in self.NLTK_ENGLISH_STOP]\n",
-    "                phrase = list(itertools.chain.from_iterable(phrases))\n",
-    "            else:\n",
+    "                    if partial_phrase not in self.NLTK_ENGLISH_STOP:\n",
+    "                        phrases.append(partial_phrase)\n",
+    "                phrase = phrases\n",
+    "            else:#split into list then eval words\n",
     "                phrase = [word for word in phrase.split(\" \") if word not in self.NLTK_ENGLISH_STOP]\n",
     "        if \"spacy_stoplist\" in self.feature_selection:\n",
     "            #use a spacy stoplist\n",
-    "            if len(self.feature_selection) > 1:\n",
+    "            if isinstance(phrase, list):\n",
     "                phrases = []\n",
     "                for partial_phrase in phrase:\n",
     "                    phrases +=  [word for word in partial_phrase.split(\" \") if word not in list(SPACY_STOP)]\n",
@@ -461,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -494,31 +500,31 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>save 70% life insurance. spend to?life quote s...</td>\n",
+       "      <td>save 70 life insurance spend life quote saving...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) fight risk cancer! http://www.adclick.ws/p....</td>\n",
+       "      <td>1 fight risk cancer http www adclick ws p cfm ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) fight risk cancer! http://www.adclick.ws/p....</td>\n",
+       "      <td>1 fight risk cancer http www adclick ws p cfm ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4.0</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>##############################################...</td>\n",
+       "      <td>adult club offers free membership instant acce...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>thought might like these: 1) slim - guaranteed...</td>\n",
+       "      <td>thought might like 1 slim guaranteed lose 10 1...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -527,51 +533,51 @@
       ],
       "text/plain": [
        "      id                                             ppBody label\n",
-       "1.0  0.0  save 70% life insurance. spend to?life quote s...     1\n",
-       "2.0  1.0  1) fight risk cancer! http://www.adclick.ws/p....     1\n",
-       "3.0  2.0  1) fight risk cancer! http://www.adclick.ws/p....     1\n",
-       "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  thought might like these: 1) slim - guaranteed...     1"
+       "1.0  0.0  save 70 life insurance spend life quote saving...     1\n",
+       "2.0  1.0  1 fight risk cancer http www adclick ws p cfm ...     1\n",
+       "3.0  2.0  1 fight risk cancer http www adclick ws p cfm ...     1\n",
+       "4.0  3.0  adult club offers free membership instant acce...     1\n",
+       "5.0  4.0  thought might like 1 slim guaranteed lose 10 1...     1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_stoplist\"], retList=False)\n",
+    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\",\"nltk_stoplist\"], retList=False)\n",
     "d.pp_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5633.0     well, thanks everyone explanations. still disa...\n",
-       "3680.0     subject: ' satisfy fgtpril man endowed 7 - 8 \"...\n",
-       "4456.0     | date: fri, 19 jul 2002 14:28:42 +0100 | from...\n",
-       "341.0                                                  empti\n",
-       "1001.0     dear sirs, know esteemed company beach towels ...\n",
-       "4637.0     quoting stephen_reilly@dell.com (stephen_reill...\n",
-       "4445.0     caolan mcnamara wrote: > tue, aug 06, 2002 04:...\n",
-       "3793.0     url: http://boingboing.net/#85485775 date: sup...\n",
-       "8795.0     subject: investment idea investor aiert - l r ...\n",
-       "12269.0    subject: heyz darling would like keep company ...\n",
+       "1801.0     s u b j e c t f w d g e t v l c o d i n x a n ...\n",
+       "511.0      y e s p u r c h a s e u n c o l l e c t e d j ...\n",
+       "12393.0    s u b j e c t g e t c o s t c o g o l d m e m ...\n",
+       "2514.0     t u e s e p 1 7 2 0 0 2 0 9 1 1 0 1 p m 0 7 0 ...\n",
+       "1279.0     s u b j e c t f i n a n c i a l s e c u r i t ...\n",
+       "2453.0     s u b j e c t s c i l 1 0 c a l l p a p e r s ...\n",
+       "22488.0    s u b j e c t h p l 7 5 t h a n n i v e r s a ...\n",
+       "3687.0     s u b j e c t f w d v l c o d i n v a l i u m ...\n",
+       "3350.0     s u b j e c t d o m a i n n a m e f l i p p a ...\n",
+       "4747.0     s u b j e c t p a y i n g m o v i e s e v e n ...\n",
        "Name: ppBody, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d.pp_df.sample(10)['ppBody']"
+    "d.pp_df.sample(10, random_state=2)['ppBody']"
    ]
   },
   {
