--- a/classif.ipynb
+++ b/classif.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -500,19 +500,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>save 70 life insurance spend life quote saving...</td>\n",
+       "      <td>save up to 70 on life insurance why spend more...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1 fight risk cancer http www adclick ws p cfm ...</td>\n",
+       "      <td>1 fight the risk of cancer http www adclick ws...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1 fight risk cancer http www adclick ws p cfm ...</td>\n",
+       "      <td>1 fight the risk of cancer http www adclick ws...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -524,7 +524,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>thought might like 1 slim guaranteed lose 10 1...</td>\n",
+       "      <td>i thought you might like these 1 slim down gua...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -533,56 +533,64 @@
       ],
       "text/plain": [
        "      id                                             ppBody label\n",
-       "1.0  0.0  save 70 life insurance spend life quote saving...     1\n",
-       "2.0  1.0  1 fight risk cancer http www adclick ws p cfm ...     1\n",
-       "3.0  2.0  1 fight risk cancer http www adclick ws p cfm ...     1\n",
+       "1.0  0.0  save up to 70 on life insurance why spend more...     1\n",
+       "2.0  1.0  1 fight the risk of cancer http www adclick ws...     1\n",
+       "3.0  2.0  1 fight the risk of cancer http www adclick ws...     1\n",
        "4.0  3.0  adult club offers free membership instant acce...     1\n",
-       "5.0  4.0  thought might like 1 slim guaranteed lose 10 1...     1"
+       "5.0  4.0  i thought you might like these 1 slim down gua...     1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\",\"nltk_stoplist\"], retList=False)\n",
-    "d.pp_df.head()"
+    "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = d.pp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1801.0     s u b j e c t f w d g e t v l c o d i n x a n ...\n",
-       "511.0      y e s p u r c h a s e u n c o l l e c t e d j ...\n",
-       "12393.0    s u b j e c t g e t c o s t c o g o l d m e m ...\n",
-       "2514.0     t u e s e p 1 7 2 0 0 2 0 9 1 1 0 1 p m 0 7 0 ...\n",
-       "1279.0     s u b j e c t f i n a n c i a l s e c u r i t ...\n",
-       "2453.0     s u b j e c t s c i l 1 0 c a l l p a p e r s ...\n",
-       "22488.0    s u b j e c t h p l 7 5 t h a n n i v e r s a ...\n",
-       "3687.0     s u b j e c t f w d v l c o d i n v a l i u m ...\n",
-       "3350.0     s u b j e c t d o m a i n n a m e f l i p p a ...\n",
-       "4747.0     s u b j e c t p a y i n g m o v i e s e v e n ...\n",
+       "1801.0     subject fwd get it all vlco din x anax vl gra ...\n",
+       "511.0      yes we do purchase uncollected judicial judgem...\n",
+       "12393.0    subject get a costco gold membership this is o...\n",
+       "2514.0     on tue sep 17 2002 at 09 11 01pm 0700 paul pre...\n",
+       "1279.0     subject re your financial security high priori...\n",
+       "2453.0     subject scil 10 call for papers student confer...\n",
+       "22488.0    subject hpl 75 th anniversary celebration hous...\n",
+       "3687.0     subject fwd vlco din valium vlagr xianax som a...\n",
+       "3350.0     subject your domain name flippant house need a...\n",
+       "4747.0     subject no more paying for movies events on ca...\n",
        "Name: ppBody, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d.pp_df.sample(10, random_state=2)['ppBody']"
+    "df.sample(10, random_state=2)['ppBody']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -591,18 +599,18 @@
        "7328"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(d.pp_df[d.pp_df['label'] == \"1\"])"
+    "len(df[df['label'] == \"1\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -611,47 +619,38 @@
        "11322"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(d.pp_df[d.pp_df['label'] == \"0\"])"
+    "len(df[df['label'] == \"0\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "negative = d.pp_df[d.pp_df['label'] == \"0\"].sample(7328)"
+    "negative = df[df['label'] == \"0\"].sample(7328)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"save 70% life insurance. spend to?life quote savings ensuring family's financial security important. life quote savings makes buying life insurance simple affordable. provide free access best companies lowest rates.life quote savings fast, easy saves money! let us help get started best values country new coverage. save hundreds even thousands dollars requesting free quote lifequote savings. service take less 5 minutes complete. shop compare. save 70% types life insurance! click free quote!protecting family best investment ever make! receipt email error and/or wish removed list, please click type remove. reside state prohibits e-mail solicitations insurance, please disregard email.\""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "d.pp_df.iloc[0]['ppBody']"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "tfidf = TfidfVectorizer(sublinear_tf=True, min_df=5, norm='l2', encoding='latin-1', ngram_range=(1, 2), stop_words='english', max_features=10000)\n",
+    "features = tfidf.fit_transform(df.ppBody).toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,8 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "tfidf = TfidfVectorizer(sublinear_tf=True, min_df=5, norm='l2', encoding='latin-1', ngram_range=(1, 2), stop_words='english', max_features=10000)\n"
+    "\n"
    ]
   },
   {
