Better roadmap for work + README update

--- a/classif.ipynb
+++ b/classif.ipynb
@@ -5,9 +5,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification with Logistic Regression\n",
+    "# Phishing Email Generation and Classification\n",
     "\n",
-    "Experimental notebook for classification of phishing emails using basic Logistic Regression"
+    "Experimental notebook for classification and generation of phishing emails using several techniques.\n",
+    "\n",
+    "Roadmap:\n",
+    "- Preprocessing\n",
+    "    - Sentiment Analysis\n",
+    "- Classification\n",
+    "    - Logistic Regression on emails\n",
+    "    - word2vec model\n",
+    "    - Transformer-based model\n",
+    "- Generation\n",
+    "    - With GANs\n",
+    "    - With T5\n",
+    "    - With transformers\n",
+    "- Adversarial Learning\n",
+    "    - EA-based method of classifying\n",
+    "    - Cyclical GANs\n",
+    "    - Use EA to seed an NN?"
    ]
   },
   {
@@ -35,6 +51,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Email-Spam-Dataset\n",
+    "\n",
+    "Use this dataset as preliminary exploration of classification techniques. Classifier can then be applied to Enron dataset if it works"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -50,26 +76,6 @@
    "outputs": [],
    "source": [
     "dfSA = pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/completeSpamAssassin.csv', names=spam_col_names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.indexing._iLocIndexer at 0x1620062f5b0>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_csv('./kaggle-datasets/Email-Spam-Dataset/completeSpamAssassin.csv').iloc(0)"
    ]
   },
   {
@@ -94,80 +100,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id       6046\n",
-       "Body     6046\n",
-       "Label    6047\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfSA.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id       10001\n",
-       "Body     10001\n",
-       "Label    10001\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfEnron.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id       2605\n",
-       "Body     2606\n",
-       "Label    2606\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfLing.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#merge datasets\n",
     "dfs = [dfSA, dfEnron, dfLing]\n",
     "dfSpam = pd.concat(dfs).dropna(axis=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a peek at the body of the emails"
    ]
   },
   {
@@ -205,19 +150,19 @@
        "    <tr>\n",
        "      <th>1.0</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>\\nSave up to 70% on Life Insurance.\\nWhy Spend...</td>\n",
+       "      <td>\\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2.0</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3.0</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>1) Fight The Risk of Cancer!\\nhttp://www.adcli...</td>\n",
+       "      <td>1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -229,7 +174,7 @@
        "    <tr>\n",
        "      <th>5.0</th>\n",
        "      <td>4.0</td>\n",
-       "      <td>I thought you might like these:\\n1) Slim Down ...</td>\n",
+       "      <td>I thought you might like these:\\r\\n1) Slim Dow...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -238,11 +183,11 @@
       ],
       "text/plain": [
        "      id                                               Body Label\n",
-       "1.0  0.0  \\nSave up to 70% on Life Insurance.\\nWhy Spend...     1\n",
-       "2.0  1.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
-       "3.0  2.0  1) Fight The Risk of Cancer!\\nhttp://www.adcli...     1\n",
+       "1.0  0.0  \\r\\nSave up to 70% on Life Insurance.\\r\\nWhy S...     1\n",
+       "2.0  1.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
+       "3.0  2.0  1) Fight The Risk of Cancer!\\r\\nhttp://www.adc...     1\n",
        "4.0  3.0  ##############################################...     1\n",
-       "5.0  4.0  I thought you might like these:\\n1) Slim Down ...     1"
+       "5.0  4.0  I thought you might like these:\\r\\n1) Slim Dow...     1"
       ]
      },
      "execution_count": 8,
@@ -261,7 +206,7 @@
    "source": [
     "# Preprocessing\n",
     "\n",
-    "In avoidance of 'self-plagiarisation', much of the code for the `Dataset` class is adapted from my Text Processing Sentiment Analysis assignment."
+    "In avoidance of 'self-plagiarisation', much of the code for the `Dataset` class is adapted from my Text Processing Sentiment Analysis assignment. Code can be provided to markers on request"
    ]
   },
   {
@@ -296,18 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\theco\\AppData\\Roaming\\Python\\Python310\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#spacy imports\n",
     "import spacy\n",
@@ -324,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,10 +367,7 @@
     "            phrase = phrase.split(\" \")\n",
     "        if \"nltk_tokenize\" in self.feature_selection:\n",
     "            #tokenize using NLTK tokenizer, with words regex\n",
-    "            # print(type(phrase))\n",
     "            if isinstance(phrase, list):\n",
-    "                # print(\"is\")\n",
-    "                # pass\n",
     "                phrase =  list(itertools.chain.from_iterable([self.word_tokenizer.tokenize(partial_phrase) for partial_phrase in phrase]))\n",
     "            else:\n",
     "                phrase = self.word_tokenizer.tokenize(phrase)\n",
@@ -556,25 +489,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#instantiate a new dataset\n",
+    "#run the preprocessing with lowercasing, removing newlines, stemming, and tokenisation using the nltk regex\n",
     "d = Dataset(dfSpam, preprocessing=[\"lower\",\"newlines\",\"stemming\"], feature_selection=[\"nltk_tokenize\"], retList=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get the dataframe\n",
     "df = d.pp_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +529,7 @@
        "Name: ppBody, dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,51 +540,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7328"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df[df['label'] == \"1\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11322"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df[df['label'] == \"0\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "negative = df[df['label'] == \"0\"].sample(7328)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis\n",
+    "\n",
+    "Run some tests on the datasets from `Email-Spam-Dataset`:\n",
+    "- find most common words in spam/not spam emails - plot on histogram\n",
+    "- classify the sentiment of each email as positive/negative and see if there's a pattern in spam/not spam"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Email Classification"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TFIDF\n",
+    "\n",
+    "Work in Progress: running TFIDF to classify Email-Spam-Dataset"
    ]
   },
   {
@@ -725,6 +651,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Word2Vec\n",
+    "\n",
+    "Classify with word2vec (see https://towardsdatascience.com/text-classification-with-nlp-tf-idf-vs-word2vec-vs-bert-41ff868d1794)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT\n",
+    "\n",
+    "Classify with BERT (also using TDS article methods)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest\n",
+    "\n",
+    "Use RF/ensemble method for some of the classifiers above to see which features work best and which preprocessing methods are good - exploring Phishing-Dataset-for-Machine-Learning features first may be helpful"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Phishing-Dataset-for-Machine-Learning\n",
+    "\n",
+    "Inspect this dataset - it is for webpages (https://www.sciencedirect.com/science/article/pii/S0020025519300763?via%3Dihub) but some of the features may be applicable to email classification\n",
+    "\n",
+    "Other repos that use this dataset to take inspiration from:\n",
+    "- https://github.com/andpalmier/MLWithPhishing\n",
+    "- https://github.com/rewanthtammana/Detect-phishing-websites-using-ML\n",
+    "- https://www.kaggle.com/code/fadilparves/pishing-detection-using-machine-learning\n",
+    "\n",
+    "Random forests used to discover best features - we could apply similar to the Email-Spam-Dataset"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New Feature Extraction\n",
+    "\n",
+    "Can we apply the features used in this dataset to Email-Spam-Dataset?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Comments\n",
     "\n"
    ]
@@ -757,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
